samples/_failures_safe/1761625161_5fa853_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9c03f1b.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
